# lively

./: README.md  com.mangoman.lively.json  meson.build
data/: com.mangoman.lively.desktop.in  com.mangoman.lively.gschema.xml  com.mangoman.lively.metainfo.xml.in  com.mangoman.lively.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: lively-application.c  lively-application.h  lively-window.c  lively-window.h  lively-window.ui  lively.gresource.xml  main.c  meson.build
